# becbot-rs

./: .env.example  .gitignore  Cargo.toml
migrations/2022-02-08-202652_initial/: down.sql  up.sql
migrations/2022-06-26-091749_suggestions/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
src/bot_modules/: autoresponder.rs  cans.rs  colors.rs  misc.rs  mod.rs  moderation.rs  quotes.rs  suggestions.rs
