[package]
name = "becbotreloaded"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Inflector = "0.11.4"
break-eternity = { git = "https://github.com/cozyGalvinism/break-eternity", rev = "08507c9" }
chrono = "0.4.19"
chrono-tz = "0.6.1"
diesel = { version = "1.4.8", features = ["sqlite", "chrono", "r2d2"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
lazy_static = "1.4.0"
log = "0.4.14"
poise = { git = "https://github.com/kangalioo/poise", rev = "a28b019", features = ["collector"] }
r2d2 = "0.8.9"
rand = { version = "0.8.5", features = ["small_rng"] }
regex = "1.5.4"
rustrict = "0.3.13"
simple_logger = "2.1.0"
tempfile = "3.3.0"
tokio = { version = "1.16.1", features = ["full"] }
